--- a/src/components/apresentacao/Apresentacao.css
+++ b/src/components/apresentacao/Apresentacao.css
@@ -34,3 +34,32 @@
     background-color: #08C6AB;
     cursor: pointer;
 }
+
+@media (min-width: 300px) and (max-width: 800px) {
+    #apresentacao {
+        flex-direction: column;
+        width: 590px;
+        text-align: center;
+        border: none;
+    }
+
+    .botao {
+        margin-bottom: 35px;
+    }
+}
+
+@media (min-width: 801px) and (max-width: 1100px) {
+    .svg img {
+        width: 400px;
+    }
+}
+
+@media (min-width: 1300px) {
+    #apresentacao {
+        height: 600px;
+    }
+
+    .svg img {
+        width: 650px;
+    }
+}
