--- a/src/components/apresentacao/Apresentacao.css
+++ b/src/components/apresentacao/Apresentacao.css
@@ -4,6 +4,7 @@
     align-items: center;
     justify-content: space-evenly;
     border: 2px solid white;
+    border-radius: 8px;
     padding: 40px;
     width: 80%;
     margin: 90px auto;
