--- a/src/components/contato/Contato.css
+++ b/src/components/contato/Contato.css
@@ -50,6 +50,7 @@
 
     .socials {
         border: 2px solid azure;
+        border-radius: 8px;
         width: 660px;
         margin-left: 20px;
     }
@@ -66,6 +67,7 @@
 
     .socials {
         border: 2px solid azure;
+        border-radius: 8px;
         width: 690px;
         margin-left: 12px;
     }
@@ -82,6 +84,7 @@
 
     .socials {
         border: 2px solid azure;
+        border-radius: 8px;
         width: 715px;
         margin-left: 20px;
     }
