--- a/src/components/contato/Contato.css
+++ b/src/components/contato/Contato.css
@@ -2,7 +2,7 @@
     margin-top: 200px;
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
+    justify-content: space-between;
 }
 
 .socials {
@@ -16,7 +16,7 @@
 
 .socials h1 {
     font-size: 4em;
-    color: #726EFF;
+    color: #04ff00;
 }
 
 .icones-sociais {
