--- a/src/components/sobre/Sobre.css
+++ b/src/components/sobre/Sobre.css
@@ -3,23 +3,27 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 80%;
-    margin: 200px auto;
+    margin: 0 auto;
+    margin-bottom: 150px;
+    margin-top: 100px;
 }
 
 .conteudo-sobre {
-    width: 50%;
+    margin: 0 auto;
 }
 
 .conteudo-sobre h2{
     font-size: 3em;
-    color: #726EFF;
+    color: #04ff00;
+    margin-bottom: 15px;
 }
 
 .paragrafo {
     font-size: 1.4em;
     text-align: justify;
-    color: azure;
+    color: #fff;
+    font-weight: bold;
+    line-height: 35px;
 }
 
 #tecnologias {
@@ -110,3 +114,8 @@
     }
 }
 
+@media (min-width: 1370px) {
+    #sobre {
+        margin-bottom: 310px;
+    }
+}
