--- a/src/components/topo/Topo.css
+++ b/src/components/topo/Topo.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 80%;
+
     margin: 15px auto;
 }
 
@@ -12,7 +12,7 @@
 }
 
 .cor {
-    color: #726EFF;
+    color: #04ff00;
 }
 
 .separar {
