--- a/src/components/apresentacao/Apresentacao.css
+++ b/src/components/apresentacao/Apresentacao.css
@@ -22,18 +22,22 @@
     border: none;
     border-radius: 11px;
     width: 200px;
-    color: #fff;
+    color: black;
     height: 30px;
     margin-top: 20px;
     font-weight: bold;
+    border-radius: 9px;
+    border-color: black;
+    box-shadow: 0 0 40px 40px #04ff00 inset, 0 0 0 0 #04ff00;
+    -webkit-transition: all 150ms ease-in-out;
+    transition: all 150ms ease-in-out;
 }
-
 .botao:hover {
-    background-color: #00ff08;
-    cursor: pointer;
-    color: black;
+  box-shadow: 0 0 10px 0 #04ff00 inset, 0 0 10px 4px #04ff00;
+  background-color: black;
+  color: white;
+  cursor: pointer;
 }
-
 
 @media (min-width: 300px) and (max-width: 800px) {
     #apresentacao {
