--- a/src/components/sobre/Sobre.css
+++ b/src/components/sobre/Sobre.css
@@ -12,10 +12,11 @@
     margin: 0 auto;
 }
 
-.conteudo-sobre h2{
+.title-neon {
     font-size: 3em;
     color: #04ff00;
     margin-bottom: 15px;
+    text-shadow: 0 0 10px black, 0 0 20px black, 0 0 30px black, 0 0 40px #5bff58, 0 0 70px #5bff58, 0 0 80px #5bff58, 0 0 100px #5bff58, 0 0 150px #5bff58;
 }
 
 .paragrafo {
@@ -24,17 +25,6 @@
     color: #fff;
     font-weight: bold;
     line-height: 35px;
-}
-
-#tecnologias {
-    padding: 50px;
-    background-color: #333e4d;
-}
-
-#tecnologias h2 {
-    font-size: 3em;
-    margin-bottom: 5px;
-    color: #726EFF;
 }
 
 .tec-bottom {
