--- a/src/components/topo/Topo.css
+++ b/src/components/topo/Topo.css
@@ -15,6 +15,12 @@
     color: #04ff00;
 }
 
+.cor3 {
+    color: #04ff00;
+    text-shadow: 0 0 10px black, 0 0 20px black, 0 0 30px black, 0 0 40px #5bff58, 0 0 70px #5bff58, 0 0 80px #5bff58, 0 0 100px #5bff58, 0 0 150px #5bff58;
+
+}
+
 .separar {
     margin-right: 10px;
 }
