--- a/src/components/Projetos/Projetos.css
+++ b/src/components/Projetos/Projetos.css
@@ -103,6 +103,10 @@
         margin-bottom: 300px;
     }
 
+    .margin-b {
+        margin-top: 30px;
+    }
+
     .titulo {
         text-align: center;
         width: 670px;
