--- a/src/components/apresentacao/Apresentacao.css
+++ b/src/components/apresentacao/Apresentacao.css
@@ -73,6 +73,7 @@
         border: none;
         margin-top: 200px;
         margin-bottom: 200px;
+        margin-left: 20px;
     }
 
     .botao {
