--- a/src/components/contato/Contato.css
+++ b/src/components/contato/Contato.css
@@ -31,6 +31,8 @@
 @media (min-width: 300px) and (max-width: 600px) {
     #contato {
         flex-direction: column;
+        margin: 0 auto;
+        margin-top: 200px;
     }
 
     .socials {
